--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "dev:network": "astro dev --host",
     "build": "astro check && astro build",
+    "buildandpreview": "astro check && astro build && astro preview",
     "preview": "astro preview",
     "preview:network": "astro preview --host",
     "astro": "astro",
